# Summarize_Service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
web/: pyproject.toml
web/app/: main.py
web/app/api/: routes.py
web/app/services/: summarizer.py
web/app/templates/: response.html  upload.html
web/app/utils/: AI_client.py  parsers.py
web/templates/: response.html  upload.html
