[tool.poetry]
name = "summarization-service"
version = "0.1.0"
description = "Document summarization service with FastAPI and OpenAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"
openai = "^1.50.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
python-docx = "^1.1.2"
pdfplumber = "^0.11.4"
python-pptx = "^0.6.23"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
